--- a/install
+++ b/install
@@ -170,13 +170,13 @@ SET "DOWNLOAD_DIR=%INSTALL_DIR%\.download"
 
 :: Check we have write access to the location the user has provided.
 :: We'll try to create a test directory to check write access.
-MKDIR %DOWNLOAD_DIR% 2>NUL
+MKDIR "%DOWNLOAD_DIR%" 2>NUL
 IF ERRORLEVEL 1 (
     ECHO It looks like we can't write to the folder: %INSTALL_DIR%
     ECHO Please make sure you have permission to write to this directory and try again.
     GOTO cleanup
 ) ELSE (
-    ATTRIB +H %DOWNLOAD_DIR%
+    ATTRIB +H "%DOWNLOAD_DIR%"
 )
 
 :: Here we download the latest release from GitHub to INSTALL_FOLDER
@@ -210,6 +210,7 @@ IF /I NOT "!CONTINUE!" == "Y" (
 :: After that, get the install script, the license and everything inside
 :: the 'app' subdirectory
 ECHO Extracting installation files...
+:: Weirdly, we can't quote the path to chdir in tar? I dunno why 🤷‍♂️
 tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --strip-components=1 --include="*\install" --include="*\LICENSE" --include="*\run" --include="*\setup" --include="*\update"
 IF ERRORLEVEL 1 (
     ECHO Failed to extract the installation files. Please try again.
@@ -257,16 +258,16 @@ ECHO You can set up a Nomi's Docker container by running the setup script.
 ECHO:
 SET /P "OPEN_FOLDER=Would you like to open the installation folder in a file browser? [y/N]: "
 IF /I "!OPEN_FOLDER!" == "Y" (
-    EXPLORER %INSTALL_DIR%
+    EXPLORER "%INSTALL_DIR%"
 )
 
 :: All done! Let's exit from the Windows part of the script
 :cleanup
 :: In case we received an error between downloading and extracting
 :: the install files, delete them here
-IF EXIST "%INSTALL_DIR%.download" (
-    ATTRIB -H "%INSTALL_DIR%.download"
-    RMDIR /S /Q "%INSTALL_DIR%.download"
+IF EXIST "%INSTALL_DIR%\.download" (
+    ATTRIB -H "%INSTALL_DIR%\.download"
+    RMDIR /S /Q "%INSTALL_DIR%\.download"
 )
 ENDLOCAL
 PAUSE
