--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 :: itself to a temporary file. We do that here:
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%-%RANDOM%-%RANDOM%.bat"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o "%TEMP_INSTALL_SCRIPT%" --remove-on-error && START /I /WAIT CMD /Q /K %TEMP_INSTALL_SCRIPT% & DEL /F /Q %TEMP_INSTALL_SCRIPT% & EXIT)
+IF ERRORLEVEL 1 (curl -sL https://raw.githubusercontent.com/toru173/nomi-discord-python/refs/heads/main/install -o "%TEMP_INSTALL_SCRIPT%" --remove-on-error && START /I /WAIT CMD /Q /K "%TEMP_INSTALL_SCRIPT%" & DEL /F /Q "%TEMP_INSTALL_SCRIPT%" & EXIT)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
@@ -167,6 +167,14 @@ IF NOT EXIST "%INSTALL_DIR%" (
 )
 
 SET "DOWNLOAD_DIR=%INSTALL_DIR%\.download"
+
+:: Sometimes we have a failed partial install
+:: Try to remove the download dir, but don't
+:: fail the install yet.
+IF EXIST "%DOWNLOAD_DIR%" (
+    ATTRIB -H "%DOWNLOAD_DIR%" 2>NUL
+    RMDIR /S /Q "%DOWNLOAD_DIR%" 2>NUL
+)
 
 :: Check we have write access to the location the user has provided.
 :: We'll try to create a test directory to check write access.
