--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 :: itself to a temporary file. We do that here:
 SET "TEMP_INSTALL_SCRIPT=%TEMP%\%RANDOM%-%RANDOM%-%RANDOM%-%RANDOM%.bat"
 TIMEOUT /T 0 >NUL 2>NUL
-IF ERRORLEVEL 1 (curl -sL ttps://github.com/toru173/nomi-discord-python/releases/latest/download/install -o "%TEMP_INSTALL_SCRIPT%" --remove-on-error && START /I /WAIT CMD /Q /K "%TEMP_INSTALL_SCRIPT%" & DEL /F /Q "%TEMP_INSTALL_SCRIPT%" & EXIT)
+IF ERRORLEVEL 1 (curl -sL https://github.com/toru173/nomi-discord-python/releases/latest/download/install -o "%TEMP_INSTALL_SCRIPT%" --remove-on-error && START /I /WAIT CMD /Q /K "%TEMP_INSTALL_SCRIPT%" & DEL /F /Q "%TEMP_INSTALL_SCRIPT%" & EXIT)
 ::
 :: We need to set a temporary install file path before
 :: the pipe-check because expansion behaves differently
