--- a/install
+++ b/install
@@ -333,7 +333,7 @@ trap "cleanup" EXIT INT
 # Cleanup function
 function cleanup() {
     EXIT_CODE=$?
-    if [ -n "$INSTALL_DIR" ] && [ -f "$INSTALL_DIR/.downloads/install.zip" ]; then
+    if [[ -n "$INSTALL_DIR" ]] && [[ -f "$INSTALL_DIR/.downloads/install.zip" ]]; then
         rm -rf "$INSTALL_DIR/.downloads/"
     fi
     exit $EXIT_CODE
@@ -361,20 +361,20 @@ function check_dependancies() {
     fi
 
     # Display installation statuses
-    if [ "$DOCKER_INSTALLED" -eq 1 ]; then
+    if [[ "$DOCKER_INSTALLED" -eq 1 ]]; then
         echo "[x] Docker is installed"
     else
         echo "[ ] Docker is not installed"
     fi
 
-    if [ "$TAR_INSTALLED" -eq 1 ]; then
+    if [[ "$TAR_INSTALLED" -eq 1 ]]; then
         echo "[x] tar is installed"
     else
         echo "[ ] tar is not installed"
     fi
 
     # If both are installed, continue
-    if [ "$DOCKER_INSTALLED" -eq 1 ] && [ "$TAR_INSTALLED" -eq 1 ]; then
+    if [[ "$DOCKER_INSTALLED" -eq 1 ]] && [[ "$TAR_INSTALLED" -eq 1 ]]; then
         echo
         echo "All required software is installed."
     else
@@ -383,7 +383,7 @@ function check_dependancies() {
         echo
         if prompt_confirm "Would you like help installing the missing software?"; then
             # If Docker is not installed, prompt to open the Docker download page
-            if [ "$DOCKER_INSTALLED" -eq 0 ]; then
+            if [[ "$DOCKER_INSTALLED" -eq 0 ]]; then
                 echo
                 echo "Docker is required but not installed."
                 if prompt_confirm "Would you like to open the Docker download page now?"; then
@@ -400,7 +400,7 @@ function check_dependancies() {
 
             # Check if tar is installed. Prompt the user to download it if not
             # by attempting to guess what package manager they are using (if any)
-            if [ "$TAR_INSTALLED" -eq 0 ]; then
+            if [[ "$TAR_INSTALLED" -eq 0 ]]; then
                 echo
                 echo "tar is required but not installed."
                 echo "You may need to install it using a package manager."
@@ -439,7 +439,7 @@ function get_script() {
     local DESTINATION_FILE="$2"
 
     # Check if the source file exists
-    if [ ! -f "$SOURCE_FILE" ]; then
+    if [[ ! -f "$SOURCE_FILE" ]]; then
         echo "Error: Source file '$SOURCE_FILE' not found!"
         return 1
     fi
@@ -447,9 +447,9 @@ function get_script() {
     local BASE_FILENAME="$(basename $SOURCE_FILE)"
 
     # Determine the destination file based on the OS
-    if [ "$(uname -s)" == "Darwin" ]; then
+    if [[ "$(uname -s)" == "Darwin" ]]; then
         DESTINATION_FILE="${DESTINATION_FILE}/${BASE_FILENAME}.command"
-    elif [ "$(uname -s)" == "Linux" ]; then
+    elif [[ "$(uname -s)" == "Linux" ]]; then
         DESTINATION_FILE="${DESTINATION_FILE}/${BASE_FILENAME}.sh"
     else
         echo "Error: Unsupported operating system '$(uname -s)'."
@@ -463,7 +463,7 @@ function get_script() {
 SCRIPT_ROOT="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 DEFAULT_INSTALL_DIR="$HOME/$INSTALL_FOLDER"
 
-if [ ! $1 == "--skip-checks" ]; then
+if [[ "$1" != "--skip-checks" ]]; then
 
     echo "==========================================================================="
     echo "============================ Easy Installer ==============================="
@@ -486,7 +486,7 @@ fi
 
 # Check if .nomi_setup_done exists in the script's current directory
 # If it does, assume the user chose this directory last time
-if [ ! -f "$SCRIPT_ROOT/.nomi_setup_done" ]; then
+if [[ ! -f "$SCRIPT_ROOT/.nomi_setup_done" ]]; then
     INSTALL_DIR="$DEFAULT_INSTALL_DIR"
     echo "Where would you like to install nomi-discord-python?"
 else
@@ -513,7 +513,7 @@ echo
 echo "Proceeding with installation in: $INSTALL_DIR"
 
 # Create the folder if it doesn't exist.
-if [ ! -d "$INSTALL_DIR" ]; then
+if [[ ! -d "$INSTALL_DIR" ]]; then
     mkdir -p "$INSTALL_DIR"
 fi
 
@@ -533,7 +533,7 @@ echo "Downloading the latest version from GitHub..."
 curl -L https://github.com/toru173/nomi-discord-python/releases/latest/download/install.zip -o "$INSTALL_DIR/.downloads/install.zip" --progress-bar --remove-on-error
 
 # Check if the download was successful
-if [ ! -f "$INSTALL_DIR/.downloads/install.zip" ]; then
+if [[ ! -f "$INSTALL_DIR/.downloads/install.zip" ]]; then
     echo "Something went wrong during the download. Please try again."
     exit 1
 fi
@@ -574,7 +574,7 @@ else
 fi
 
 # Check if the extraction was successful
-if [ $? -ne 0 ]; then
+if [[ $? -ne 0 ]]; then
     echo "Failed to extract the installation files. Please try again."
     exit 1
 fi
@@ -582,7 +582,7 @@ fi
 # Check if the install script exists (it should). Rename it to
 # install.sh on linux and install.command on macOS to make running
 # it from the command line easier later and add a shebang
-if [ -f "$INSTALL_DIR/install" ]; then
+if [[ -f "$INSTALL_DIR/install" ]]; then
     get_script "$INSTALL_DIR/install" "$INSTALL_DIR/"
     rm "$INSTALL_DIR/install"
 else
@@ -593,10 +593,10 @@ fi
 # dir and make it executable to make running it from the command line easier,
 # and make it double-clickable
 # for users to update
-if [ "$(uname -s)" == "Darwin" ]; then
+if [[ "$(uname -s)" == "Darwin" ]]; then
     INSTALL_SCRIPT="$INSTALL_DIR/install.command"
     UPDATE_SCRIPT="$INSTALL_DIR/update.command"
-elif [ "$(uname -s)" == "Linux" ]; then
+elif [[ "$(uname -s)" == "Linux" ]]; then
     INSTALL_SCRIPT="$INSTALL_DIR/install.sh"
     UPDATE_SCRIPT="$INSTALL_DIR/update.sh"
 else
@@ -607,7 +607,7 @@ fi
 # Check if the Nomi update script exists (it should). Copy it to our install
 # dir and make it executable to make running it from the command line easier,
 # and make it double-clickable
-if [ -f "$INSTALL_DIR/update/update" ]; then
+if [[ -f "$INSTALL_DIR/update/update" ]]; then
     get_script "$INSTALL_DIR/update/update" "$INSTALL_DIR"
 else
     echo "Error: update script not found in $INSTALL_DIR/update"
@@ -616,7 +616,7 @@ fi
 # Check if the Nomi setup script exists (it should). Copy it to our install
 # dir and make it executable to make running it from the command line easier,
 # and make it double-clickable
-if [ -f "$INSTALL_DIR/setup/setup" ]; then
+if [[ -f "$INSTALL_DIR/setup/setup" ]]; then
     get_script "$INSTALL_DIR/setup/setup" "$INSTALL_DIR"
 else
     echo "Error: setup script not found in $INSTALL_DIR/setupx"
@@ -631,9 +631,9 @@ touch "$INSTALL_DIR/.nomi_setup_done"
 # to the user and ask if they want to set up any Nomis now. If the
 # user wants to set up a Nomi run the setup file in this directory
 # for them
-if [ "$(uname -s)" == "Darwin" ]; then
+if [[ "$(uname -s)" == "Darwin" ]]; then
     SETUP_SCRIPT="$INSTALL_DIR/setup.command"
-elif [ "$(uname -s)" == "Linux" ]; then
+elif [[ "$(uname -s)" == "Linux" ]]; then
     SETUP_SCRIPT="$INSTALL_DIR/setup.sh"
 else
     echo "Error: Unsupported operating system '$(uname -s)'."
