--- a/install
+++ b/install
@@ -219,7 +219,7 @@ IF /I NOT "!CONTINUE!" == "Y" (
 :: the 'app' subdirectory
 ECHO Extracting installation files...
 :: Weirdly, we can't quote the path to chdir in tar? I dunno why 🤷‍♂️
-tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --include="install" --include="LICENSE" --include="app\" --include="setup\" --include="update\"
+tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --include="install" --include="LICENSE" --include="app\\" --include="setup\\" --include="update\\"
 
 IF ERRORLEVEL 1 (
     ECHO Failed to extract the installation files. Please try again.
