--- a/install
+++ b/install
@@ -143,6 +143,7 @@ if EXIST "!SCRIPT_ROOT!\.nomi_setup_done" (
 
 ECHO:
 ECHO Where would you like to install nomi-discord-python?
+ECHO:
 
 :CONFIRM_INSTALL_DIR
 ECHO Install Directory: %INSTALL_DIR%
@@ -219,7 +220,7 @@ IF /I NOT "!CONTINUE!" == "Y" (
 :: the 'app' subdirectory
 ECHO Extracting installation files...
 :: Weirdly, we can't quote the path to chdir in tar? I dunno why 🤷‍♂️
-tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --include="install" --include="LICENSE" --include="app\\*" --include="setup\\*" --include="update\\*"
+tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --include="install" --include="LICENSE" --include="app/*" --include="setup/*" --include="update/*"
 
 IF ERRORLEVEL 1 (
     ECHO Failed to extract the installation files. Please try again.
