--- a/install
+++ b/install
@@ -190,7 +190,7 @@ IF ERRORLEVEL 1 (
 
 :: Here we download the latest release from GitHub to INSTALL_FOLDER
 ECHO Downloading the latest version from GitHub...
-curl -L https://github.com/toru173/nomi-discord-python-development/releases/latest/download/install.zip -o "%DOWNLOAD_DIR%\install.zip" --progress-bar --remove-on-error
+curl -L https://github.com/toru173/nomi-discord-python-development/releases/latest/download/install.zip -o "%DOWNLOAD_DIR%\install.zip" --progress-bar
 IF NOT EXIST "%DOWNLOAD_DIR%\install.zip" (
     ECHO Something went wrong during the download. Please try again.
     GOTO CLEANUP
@@ -334,7 +334,7 @@ trap "cleanup" EXIT INT
 # Cleanup function
 function cleanup() {
     EXIT_CODE=$?
-    if [[ -n "$INSTALL_DIR" ]] && [[ -f "$INSTALL_DIR/.downloads/install.zip" ]]; then
+    if [[ -n "$INSTALL_DIR" ]] && [[ -d "$INSTALL_DIR/.downloads" ]]; then
         rm -rf "$INSTALL_DIR/.downloads/"
     fi
     exit $EXIT_CODE
@@ -524,7 +524,7 @@ WRITE_TEST="${INSTALL_DIR}/.downloads"
 
 # Check we have write access to the location the user has provided.
 # We'll try to create a test directory to check write access.
-if ! mkdir "$WRITE_TEST" 2>/dev/null; then
+if ! mkdir -p "$WRITE_TEST" 2>/dev/null; then
     echo "It looks like we can't write to the folder: $INSTALL_DIR"
     echo "Please make sure you have permission to write to this directory and try again."
     exit 1
@@ -532,7 +532,7 @@ fi
 
 # Download the latest release from GitHub to INSTALL_FOLDER
 echo "Downloading the latest version from GitHub..."
-curl -L https://github.com/toru173/nomi-discord-python-development/releases/latest/download/install.zip -o "$INSTALL_DIR/.downloads/install.zip" --progress-bar --remove-on-error
+curl -L https://github.com/toru173/nomi-discord-python-development/releases/latest/download/install.zip -o "$INSTALL_DIR/.downloads/install.zip" --progress-bar
 
 # Check if the download was successful
 if [[ ! -f "$INSTALL_DIR/.downloads/install.zip" ]]; then
